name:                sampling
version:             0.1.0
synopsis:            Sample values from collections.
homepage:            https://github.com/jtobin/sampling
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:
  Basic tools for sampling from arbitrary collections.
  .
  FIXME make me more informative.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/sampling.git

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  ghc-options:         -Wall
  other-modules:
    Numeric.Sampling.Internal
  exposed-modules:
    Numeric.Sampling
  build-depends:
      base        < 5
    , data-ordlist
    , foldl
    , mwc-random
    , primitive
    , vector
    , vector-algorithms

executable sample-test
  hs-source-dirs:    src
  Main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:
    -Wall -O2
  build-depends:
      base
    , sampling
